--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "name": "Bussola Suoni – Parco Majella",
   "short_name": "Majella Rilevamenti",
@@ -6,6 +5,17 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#171719",
-  "theme_color": "#2E5A8A"
-  
+  "theme_color": "#2E5A8A",
+  "icons": [
+    {
+      "src": "img/logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "img/logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
